Working towards a plain Java home